# yolov8_tensorrtx

./: CMakeLists.txt  LICENSE  README.md  demo.cpp
include/: block.h  config.h  postprocess.h  types.h  yolov8_trt.h
src/: block.cpp  postprocess.cpp  yololayer.cu  yolov8_trt.cpp
